start of converting tests to l3build

--- a/intcalc.dtx
+++ b/intcalc.dtx
@@ -134,11 +134,11 @@ and the derived files
   \file{intcalc.drv}{\from{intcalc.dtx}{driver}}%
   \usedir{tex/generic/oberdiek}%
   \file{intcalc.sty}{\from{intcalc.dtx}{package}}%
-  \usedir{doc/latex/oberdiek/test}%
-  \file{intcalc-test1.tex}{\from{intcalc.dtx}{test1}}%
-  \file{intcalc-test2.tex}{\from{intcalc.dtx}{test2,etex}}%
-  \file{intcalc-test3.tex}{\from{intcalc.dtx}{test2,noetex}}%
-  \file{intcalc-test4.tex}{\from{intcalc.dtx}{test4,etex}}%
+%  \usedir{doc/latex/oberdiek/test}%
+%  \file{intcalc-test1.tex}{\from{intcalc.dtx}{test1}}%
+%  \file{intcalc-test2.tex}{\from{intcalc.dtx}{test2,etex}}%
+%  \file{intcalc-test3.tex}{\from{intcalc.dtx}{test2,noetex}}%
+%  \file{intcalc-test4.tex}{\from{intcalc.dtx}{test4,etex}}%
   \nopreamble
   \nopostamble
   \usedir{source/latex/oberdiek/catalogue}%
