--- a/intcalc.dtx
+++ b/intcalc.dtx
@@ -141,8 +141,8 @@ and the derived files
 %  \file{intcalc-test4.tex}{\from{intcalc.dtx}{test4,etex}}%
   \nopreamble
   \nopostamble
-  \usedir{source/latex/oberdiek/catalogue}%
-  \file{intcalc.xml}{\from{intcalc.dtx}{catalogue}}%
+%  \usedir{source/latex/oberdiek/catalogue}%
+%  \file{intcalc.xml}{\from{intcalc.dtx}{catalogue}}%
 }
 
 \catcode32=13\relax% active space
