markup \url{... ctan archive path } links as \CTANpkg using the /pkg URL as definition

--- a/intcalc.dtx
+++ b/intcalc.dtx
@@ -4067,7 +4067,7 @@ and the derived files
 % \subsection{Download}
 %
 % \paragraph{Package.} This package is available on
-% CTAN\footnote{\url{https://ctan.org/pkg/intcalc}}:
+% CTAN\footnote{\CTANpkg{intcalc}}:
 % \begin{description}
 % \item[\CTAN{macros/latex/contrib/oberdiek/intcalc.dtx}] The source file.
 % \item[\CTAN{macros/latex/contrib/oberdiek/intcalc.pdf}] Documentation.
