--- a/intcalc.dtx
+++ b/intcalc.dtx
@@ -1,13 +1,13 @@
 % \iffalse meta-comment
 %
 % File: intcalc.dtx
-% Version: 2016/05/16 v1.2
+% Version: 2019/12/15 v1.3
 % Info: Expandable calculations with integers
 %
 % Copyright (C)
 %    2007 Heiko Oberdiek
 %    2016-2019 Oberdiek Package Support Group
-%    https://github.com/ho-tex/oberdiek/issues
+%    https://github.com/ho-tex/intcalc/issues
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either
@@ -23,7 +23,7 @@
 %
 % The Current Maintainers of this work are
 % Heiko Oberdiek and the Oberdiek Package Support Group
-% https://github.com/ho-tex/oberdiek/issues
+% https://github.com/ho-tex/intcalc/issues
 %
 % The Base Interpreter refers to any `TeX-Format',
 % because some files are installed in TDS:tex/generic//.
@@ -35,8 +35,8 @@
 %    intcalc-test4.tex.
 %
 % Distribution:
-%    CTAN:macros/latex/contrib/oberdiek/intcalc.dtx
-%    CTAN:macros/latex/contrib/oberdiek/intcalc.pdf
+%    CTAN:macros/latex/contrib/intcalc/intcalc.dtx
+%    CTAN:macros/latex/contrib/intcalc/intcalc.pdf
 %
 % Unpacking:
 %    (a) If intcalc.ins is present:
@@ -65,9 +65,9 @@
 %       pdflatex intcalc.dtx
 %
 % Installation:
-%    TDS:tex/generic/oberdiek/intcalc.sty
-%    TDS:doc/latex/oberdiek/intcalc.pdf
-%    TDS:source/latex/oberdiek/intcalc.dtx
+%    TDS:tex/generic/intcalc/intcalc.sty
+%    TDS:doc/latex/intcalc/intcalc.pdf
+%    TDS:source/latex/intcalc/intcalc.dtx
 %
 %<*ignore>
 \begingroup
@@ -84,7 +84,7 @@
 \input docstrip.tex
 \Msg{************************************************************************}
 \Msg{* Installation}
-\Msg{* Package: intcalc 2016/05/16 v1.2 Expandable calculations with integers (HO)}
+\Msg{* Package: intcalc 2019/12/15 v1.3 Expandable calculations with integers (HO)}
 \Msg{************************************************************************}
 
 \keepsilent
@@ -96,7 +96,7 @@
 This is a generated file.
 
 Project: intcalc
-Version: 2016/05/16 v1.2
+Version: 2019/12/15 v1.3
 
 Copyright (C)
    2007 Heiko Oberdiek
@@ -116,7 +116,7 @@ This work has the LPPL maintenance status "maintained".
 
 The Current Maintainers of this work are
 Heiko Oberdiek and the Oberdiek Package Support Group
-https://github.com/ho-tex/oberdiek/issues
+https://github.com/ho-tex/intcalc/issues
 
 
 The Base Interpreter refers to any `TeX-Format',
@@ -134,13 +134,8 @@ and the derived files
 \generate{%
   \file{intcalc.ins}{\from{intcalc.dtx}{install}}%
   \file{intcalc.drv}{\from{intcalc.dtx}{driver}}%
-  \usedir{tex/generic/oberdiek}%
+  \usedir{tex/generic/intcalc}%
   \file{intcalc.sty}{\from{intcalc.dtx}{package}}%
-%  \usedir{doc/latex/oberdiek/test}%
-%  \file{intcalc-test1.tex}{\from{intcalc.dtx}{test1}}%
-%  \file{intcalc-test2.tex}{\from{intcalc.dtx}{test2,etex}}%
-%  \file{intcalc-test3.tex}{\from{intcalc.dtx}{test2,noetex}}%
-%  \file{intcalc-test4.tex}{\from{intcalc.dtx}{test4,etex}}%
 }
 
 \catcode32=13\relax% active space
@@ -167,7 +162,7 @@ and the derived files
 %<*driver>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{intcalc.drv}%
-  [2016/05/16 v1.2 Expandable calculations with integers (HO)]%
+  [2019/12/15 v1.3 Expandable calculations with integers (HO)]%
 \documentclass{ltxdoc}
 \usepackage{wasysym}
 \let\iint\relax
@@ -215,9 +210,9 @@ and the derived files
 % \GetFileInfo{intcalc.drv}
 %
 % \title{The \xpackage{intcalc} package}
-% \date{2016/05/16 v1.2}
+% \date{2019/12/15 v1.3}
 % \author{Heiko Oberdiek\thanks
-% {Please report any issues at \url{https://github.com/ho-tex/oberdiek/issues}}}
+% {Please report any issues at \url{https://github.com/ho-tex/intcalc/issues}}}
 %
 % \maketitle
 %
@@ -685,7 +680,7 @@ and the derived files
   \fi
 \expandafter\x\csname ver@intcalc.sty\endcsname
 \ProvidesPackage{intcalc}%
-  [2016/05/16 v1.2 Expandable calculations with integers (HO)]%
+  [2019/12/15 v1.3 Expandable calculations with integers (HO)]%
 %    \end{macrocode}
 %
 % \subsection{Catcodes}
@@ -3103,17 +3098,17 @@ and the derived files
 % \paragraph{Package.} This package is available on
 % CTAN\footnote{\CTANpkg{intcalc}}:
 % \begin{description}
-% \item[\CTAN{macros/latex/contrib/oberdiek/intcalc.dtx}] The source file.
-% \item[\CTAN{macros/latex/contrib/oberdiek/intcalc.pdf}] Documentation.
+% \item[\CTAN{macros/latex/contrib/intcalc/intcalc.dtx}] The source file.
+% \item[\CTAN{macros/latex/contrib/intcalc/intcalc.pdf}] Documentation.
 % \end{description}
 %
 %
-% \paragraph{Bundle.} All the packages of the bundle `oberdiek'
+% \paragraph{Bundle.} All the packages of the bundle `intcalc'
 % are also available in a TDS compliant ZIP archive. There
 % the packages are already unpacked and the documentation files
 % are generated. The files and directories obey the TDS standard.
 % \begin{description}
-% \item[\CTANinstall{install/macros/latex/contrib/oberdiek.tds.zip}]
+% \item[\CTANinstall{install/macros/latex/contrib/intcalc.tds.zip}]
 % \end{description}
 % \emph{TDS} refers to the standard ``A Directory Structure
 % for \TeX\ Files'' (\CTANpkg{tds}). Directories
@@ -3121,11 +3116,11 @@ and the derived files
 %
 % \subsection{Bundle installation}
 %
-% \paragraph{Unpacking.} Unpack the \xfile{oberdiek.tds.zip} in the
+% \paragraph{Unpacking.} Unpack the \xfile{intcalc.tds.zip} in the
 % TDS tree (also known as \xfile{texmf} tree) of your choice.
 % Example (linux):
 % \begin{quote}
-%   |unzip oberdiek.tds.zip -d ~/texmf|
+%   |unzip intcalc.tds.zip -d ~/texmf|
 % \end{quote}
 %
 % \subsection{Package installation}
@@ -3143,9 +3138,9 @@ and the derived files
 % \begin{quote}
 % \def\t{^^A
 % \begin{tabular}{@{}>{\ttfamily}l@{ $\rightarrow$ }>{\ttfamily}l@{}}
-%   intcalc.sty & tex/generic/oberdiek/intcalc.sty\\
-%   intcalc.pdf & doc/latex/oberdiek/intcalc.pdf\\
-%   intcalc.dtx & source/latex/oberdiek/intcalc.dtx\\
+%   intcalc.sty & tex/generic/intcalc/intcalc.sty\\
+%   intcalc.pdf & doc/latex/intcalc/intcalc.pdf\\
+%   intcalc.dtx & source/latex/intcalc/intcalc.dtx\\
 % \end{tabular}^^A
 % }^^A
 % \sbox0{\t}^^A
@@ -3276,6 +3271,10 @@ and the derived files
 %     Some programmer's interface.
 %   \end{Version}
 %   \begin{Version}{2016/05/16 v1.2}
+%   \item
+%     Documentation updates.
+%   \end{Version}
+%   \begin{Version}{2019/12/15 v1.3}
 %   \item
 %     Documentation updates.
 %   \end{Version}
